# v2-ai-mcp

./: .coverage  .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  STRATEGIC_VISION.md  hello.py  main.py  prd.md  pyproject.toml  renovate.json  scraper.py  summarizer.py  test_api.py
.github/workflows/: ci.yml
src/v2_ai_mcp/: __init__.py  contentful_client.py  main.py  scraper.py  summarizer.py
src/v2_ai_mcp/schemas/: contentful_schema.json
tests/: __init__.py  test_contentful_client.py  test_main.py  test_scraper.py  test_summarizer.py
